Changes for Perl extension Module-Install

0.72 Tue 15 Apr 2008 - Adam Kennedy
	- Change docs to recommend the use of test_requires instead
	  of build_requires. They do the same thing now, but this may
	  change in the future and in that case better people use
	  test_requires now as it is a more accurate description of
	  intent. Also, it reads clearer. (ADAMK)
	- Removed the command prompt_script, it did some unusual magic
	  and it easy enough to replace with 2 lines of code in the
	  Makefile.PL of anyone using it anyway (ADAMK)
	- Merged the remaining install_script into Metadata.pm (ADAMK)
	- Adding documentation about the configure_requires command (ADAMK)
	- Automatically add any install_share directory to no_index (ADAMK)
	- Check scripts passed to install_script actually exist (ADAMK)
	- Allow install_script('foo') to be shorthand for
	  install_script('script/foo') if no root 'foo' file exists.
	  This should allow for yet more typing reduction (ADAMK)
	- For even more typing reduction, "use inc::Module::Install"
	  now acts as an implicit "use strict", so you don't need to
	  use strict in Makefile.PL (ADAMK)
	- Fixed a regex bug in name_from (and thus all_from) (ADAMK)

0.71 Mon 24 Mar 2008 - Adam Kennedy
	- YAML::Tiny is now good enough to use exclusively (ADAMK)
	- Converted Changes file to my normal format, so that my release
	  automation can deal with it properly (ADAMK)
	- Added name_from to auto-detect name, and include name_from in
	  all_from, so now no name line is needed at all in the
	  Makefile.PL (ADAMK)
	- Removed the redundant Module::Install::Makefile::Name and
	  Module::Install::Makefile::Version, they were almost never
	  used and were a bit too magic. (ADAMK)
	- Adding a "wrote" flag to the M:I object in preparation for
	  making WriteAll implicit by default (ADAMK)
	- Correcting 01_compile.t to check for 5.004 instead of 5.005
	  (ADAMK)
	- Added Module::Install::_version to numify CPAN-like versions
	  properly (ADAMK)